Added: requests Refactored: requirements.txt

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,6 @@
 {
   "database_path": "database/main.db",
-  "bot_token": ""
+  "bot_token": "",
+  "get_quote_link": "https://https://api.fluxbeam.xyz/v1/quote",
+  "get_transaction_link": "https://https://api.fluxbeam.xyz/v1/swap/transaction"
 }
