Created: 1) bot functional Refactored: sol_interface

--- a/config/config.json
+++ b/config/config.json
@@ -2,6 +2,6 @@
   "database_path": "database/main.db",
   "bot_token": "",
   "token_for_buy": "",
-  "get_quote_link": "https://https://api.fluxbeam.xyz/v1/quote",
-  "get_transaction_link": "https://https://api.fluxbeam.xyz/v1/swap/transaction"
+  "get_quote_link": "https://api.fluxbeam.xyz/v1/quote",
+  "get_transaction_link": "https://api.fluxbeam.xyz/v1/swap/transaction"
 }
