Created: 1) solana_worker.py 2) strings_former.py 3) main_database.py Refactored: 1) sol_interface

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,8 @@
 {
   "database_path": "database/main.db",
   "bot_token": "",
-  "token_for_buy": "",
+  "token_for_buy": "Cz8VBgwj3jJ1C8QZNyzCLvQdiV7X241o5raMkWQVYrBH",
   "get_quote_link": "https://api.fluxbeam.xyz/v1/quote",
-  "get_transaction_link": "https://api.fluxbeam.xyz/v1/swap/transaction"
+  "get_transaction_link": "https://api.fluxbeam.xyz/v1/swap/transaction",
+  "rpc_url": "https://api.devnet.solana.com"
 }
